# p3if

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  PACKAGE_README.md  PAI.md  README.md  TODO.md  __init__.py  conftest.py  demo_terminal.py  docs_validation_report.json  final_validation_report.py  generate_3d_visualization.py  generate_all_temp.py  generate_portal.py  generate_sample_data.py  interactive_terminal.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  serve_website.sh  setup.py  simple_terminal.sh  test_terminal_menu.py  validate_system.py  validation_report.json
analysis/: __init__.py  basic.py  meta.py  network.py  report.py
core/: __init__.py  framework.py  models.py
data/: AGENTS.md  README.md  __init__.py  domains.py  exporters.py  importers.py  synthetic.py
docs/: AGENTS.md  AI_PROMPT_LIBRARY.md  DOCUMENTATION_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_REVIEW_REPORT.md  FAQ.md  LLM_DEVELOPMENT_GUIDE.md  P3IF.md  P3IF_IMPROVEMENTS_SUMMARY.md  README.md  p3if_paste.md  website_design_spec.md
examples/: AGENTS.md  README.md  __init__.py
p3if/: __init__.py
p3if.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
p3if_examples/: README.md  __init__.py  cognitive_security_orchestrator.py  framework_integration_orchestrator.py  healthcare_domain_orchestrator.py  integration_examples.py
p3if_methods/: README.md  __init__.py  core.py  dimensions.py  framework.py  models.py  orchestration.py  performance_monitoring.py  validation.py
p3if_tests/: README.md  test_composition.py  test_core.py  test_validation.py  utils.py
p3if_visualization/: README.md  __init__.py  animated_dimensions.py  animation_visualizations.py  base.py  cube_visualizations.py  dashboard.py  grid_visualizations.py  heatmap_visualizations.py  hierarchy_visualizations.py  interactive.py  interactive_3d.py  (+8 more)
(+485 files in other folders)
